# craft-fm

./: .gitignore  Cargo.toml  README.md  biome.json  index.html  index.js  package-lock.json  package.json  webpack.config.js  worker.js
.github/: dependabot.yml
.github/workflows/: ci.yml
samples/: a0.m4a  a1.m4a  a2.m4a  a3.m4a  a4.m4a
src/: arps.rs  chord.rs  envelope.rs  envs.rs  interval.rs  lib.rs  log.rs  machines.rs  noise.rs  note.rs  player.rs  result.rs  sampler.rs  sequencer.rs  songs.rs  synthesizer.rs  theory.rs  unit.rs  worker.rs
src/arpeggiators/: up_down.rs
src/arps/: down.rs  up.rs  up_down.rs
src/envs/: pitch.rs
src/machines/: toy808.rs
src/songs/: forest.rs  metronome.rs  toy808.rs
src/theory/: chord.rs  chord_like.rs  duration.rs  interval.rs  inversion.rs  note.rs  pitch_class.rs  quality.rs
