[package]
name = "craft-fm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.12", features = ["js"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"

[dependencies.web-sys]
version = "0.3.67"
features = [
  "AudioBuffer",
  "AudioBufferSourceNode",
  "AudioBufferSourceOptions",
  "AudioContext",
  "AudioDestinationNode",
  "MessageEvent",
  "OscillatorNode",
  "OscillatorType",
  "Window",
  "Worker",
  "console"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
