[package]
name = "craft-fm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.45"

[dependencies.web-sys]
version = "0.3.74"
features = [
  "AudioBuffer",
  "AudioBufferSourceNode",
  "AudioBufferSourceOptions",
  "AudioContext",
  "AudioDestinationNode",
  "AudioParam",
  "BiquadFilterNode",
  "BiquadFilterType",
  "GainNode",
  "MessageEvent",
  "OscillatorNode",
  "OscillatorType",
  "Window",
  "Worker",
  "console"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.56"
